...

- (void) addBudgetSucceeded {
    [self.navigationController popToRootViewControllerAnimated:YES];
}

- (void) addBudgetFailed {
    [self getAlerted:@"Duplicate Name" msg:@"You cannot have two budgets with the same name"];
    
}


//clicked add category button
- (IBAction)addCell:(id)sender {
...
                                                         NSCalendarUnitHour  |
                                                         NSCalendarUnitMinute|
                                                         NSCalendarUnitSecond) fromDate:[_datePicker date]];
    
    
    if (budgetName.length < 1){
        [self getAlerted:@"Required Fields" msg:@"Please fill in all required fields"];
        _budgetNameTF.layer.borderColor=[[UIColor redColor]CGColor];
        _budgetNameTF.layer.borderWidth= 1.0f;
    }
    else if (_periodTF.text.length < 1) {
        [self getAlerted:@"Required Fields" msg:@"Please fill in all required fields"];
        _periodTF.layer.borderColor = [[UIColor redColor]CGColor];
...
